DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'callout'", "'class'", "'continue'", 
                     "'else'", "'for'", "'if'", "'return'", "'void'", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'", "'['", "']'", "'('", "')'", 
                     "';'", "','", "'-'", "'!'", "'='" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CALLOUT", "CLASS", "CONTINUE", 
                      "ELSE", "FOR", "IF", "RETURN", "VOID", "WS", "COMMENT", 
                      "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", "LBRACKET", 
                      "RBRACKET", "SEMICOLON", "COMMA", "MINUS", "EXCLAMATION", 
                      "EQUALS", "STRING_LITERAL", "INT_LITERAL", "DECIMAL_LITERAL", 
                      "HEX_LITERAL", "CHAR_LITERAL", "BOOL_LITERAL", "TYPE", 
                      "ASSIGN_OP", "BIN_OP", "ID", "NUMBER", "HEX_DIGIT" ]

    RULE_program = 0
    RULE_field_name = 1
    RULE_field_decl = 2
    RULE_method_decl = 3
    RULE_block = 4
    RULE_var_decl = 5
    RULE_expr = 6
    RULE_statement = 7
    RULE_method_call = 8
    RULE_method_name = 9
    RULE_location = 10
    RULE_callout_arg = 11
    RULE_literal = 12

    ruleNames =  [ "program", "field_name", "field_decl", "method_decl", 
                   "block", "var_decl", "expr", "statement", "method_call", 
                   "method_name", "location", "callout_arg", "literal" ]

    EOF = Token.EOF
    BREAK=1
    CALLOUT=2
    CLASS=3
    CONTINUE=4
    ELSE=5
    FOR=6
    IF=7
    RETURN=8
    VOID=9
    WS=10
    COMMENT=11
    LCURLY=12
    RCURLY=13
    LSQUARE=14
    RSQUARE=15
    LBRACKET=16
    RBRACKET=17
    SEMICOLON=18
    COMMA=19
    MINUS=20
    EXCLAMATION=21
    EQUALS=22
    STRING_LITERAL=23
    INT_LITERAL=24
    DECIMAL_LITERAL=25
    HEX_LITERAL=26
    CHAR_LITERAL=27
    BOOL_LITERAL=28
    TYPE=29
    ASSIGN_OP=30
    BIN_OP=31
    ID=32
    NUMBER=33
    HEX_DIGIT=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(DecafParser.CLASS, 0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def EOF(self):
            return self.getToken(DecafParser.EOF, 0)

        def field_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Method_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Method_declContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(DecafParser.CLASS)
            self.state = 27
            self.match(DecafParser.ID)
            self.state = 28
            self.match(DecafParser.LCURLY)
            self.state = 32
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 29
                    self.field_decl() 
                self.state = 34
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.VOID or _la==DecafParser.TYPE:
                self.state = 35
                self.method_decl()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(DecafParser.RCURLY)
            self.state = 42
            self.match(DecafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LSQUARE(self):
            return self.getToken(DecafParser.LSQUARE, 0)

        def INT_LITERAL(self):
            return self.getToken(DecafParser.INT_LITERAL, 0)

        def RSQUARE(self):
            return self.getToken(DecafParser.RSQUARE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_field_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_name" ):
                listener.enterField_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_name" ):
                listener.exitField_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_name" ):
                return visitor.visitField_name(self)
            else:
                return visitor.visitChildren(self)




    def field_name(self):

        localctx = DecafParser.Field_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_field_name)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(DecafParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(DecafParser.ID)
                self.state = 46
                self.match(DecafParser.LSQUARE)
                self.state = 47
                self.match(DecafParser.INT_LITERAL)
                self.state = 48
                self.match(DecafParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(DecafParser.TYPE, 0)

        def field_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_nameContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_nameContext,i)


        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_field_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_decl" ):
                listener.enterField_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_decl" ):
                listener.exitField_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_decl" ):
                return visitor.visitField_decl(self)
            else:
                return visitor.visitChildren(self)




    def field_decl(self):

        localctx = DecafParser.Field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_field_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(DecafParser.TYPE)
            self.state = 52
            self.field_name()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 53
                self.match(DecafParser.COMMA)
                self.state = 54
                self.field_name()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.ID)
            else:
                return self.getToken(DecafParser.ID, i)

        def LBRACKET(self):
            return self.getToken(DecafParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DecafParser.RBRACKET, 0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.TYPE)
            else:
                return self.getToken(DecafParser.TYPE, i)

        def VOID(self):
            return self.getToken(DecafParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_method_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_decl" ):
                listener.enterMethod_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_decl" ):
                listener.exitMethod_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_decl" ):
                return visitor.visitMethod_decl(self)
            else:
                return visitor.visitChildren(self)




    def method_decl(self):

        localctx = DecafParser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==DecafParser.VOID or _la==DecafParser.TYPE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 63
            self.match(DecafParser.ID)
            self.state = 64
            self.match(DecafParser.LBRACKET)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.TYPE:
                self.state = 65
                self.match(DecafParser.TYPE)
                self.state = 66
                self.match(DecafParser.ID)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.COMMA:
                    self.state = 68
                    self.match(DecafParser.COMMA)
                    self.state = 69
                    self.match(DecafParser.TYPE)
                    self.state = 70
                    self.match(DecafParser.ID)
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(DecafParser.RBRACKET)
            self.state = 82
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_declContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(DecafParser.LCURLY)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.TYPE:
                self.state = 85
                self.var_decl()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BREAK) | (1 << DecafParser.CALLOUT) | (1 << DecafParser.CONTINUE) | (1 << DecafParser.FOR) | (1 << DecafParser.IF) | (1 << DecafParser.RETURN) | (1 << DecafParser.LCURLY) | (1 << DecafParser.ID))) != 0):
                self.state = 91
                self.statement()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(DecafParser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.ID)
            else:
                return self.getToken(DecafParser.ID, i)

        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = DecafParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(DecafParser.TYPE)
            self.state = 100
            self.match(DecafParser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 101
                self.match(DecafParser.COMMA)
                self.state = 102
                self.match(DecafParser.ID)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def method_call(self):
            return self.getTypedRuleContext(DecafParser.Method_callContext,0)


        def literal(self):
            return self.getTypedRuleContext(DecafParser.LiteralContext,0)


        def MINUS(self):
            return self.getToken(DecafParser.MINUS, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(DecafParser.ExprContext,i)


        def EXCLAMATION(self):
            return self.getToken(DecafParser.EXCLAMATION, 0)

        def LBRACKET(self):
            return self.getToken(DecafParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DecafParser.RBRACKET, 0)

        def BIN_OP(self):
            return self.getToken(DecafParser.BIN_OP, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DecafParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 111
                self.location()
                pass

            elif la_ == 2:
                self.state = 112
                self.method_call()
                pass

            elif la_ == 3:
                self.state = 113
                self.literal()
                pass

            elif la_ == 4:
                self.state = 114
                self.match(DecafParser.MINUS)
                self.state = 115
                self.expr(3)
                pass

            elif la_ == 5:
                self.state = 116
                self.match(DecafParser.EXCLAMATION)
                self.state = 117
                self.expr(2)
                pass

            elif la_ == 6:
                self.state = 118
                self.match(DecafParser.LBRACKET)
                self.state = 119
                self.expr(0)
                self.state = 120
                self.match(DecafParser.RBRACKET)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DecafParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 124
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 125
                    self.match(DecafParser.BIN_OP)
                    self.state = 126
                    self.expr(5) 
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def ASSIGN_OP(self):
            return self.getToken(DecafParser.ASSIGN_OP, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(DecafParser.ExprContext,i)


        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def method_call(self):
            return self.getTypedRuleContext(DecafParser.Method_callContext,0)


        def IF(self):
            return self.getToken(DecafParser.IF, 0)

        def LBRACKET(self):
            return self.getToken(DecafParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DecafParser.RBRACKET, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.BlockContext)
            else:
                return self.getTypedRuleContext(DecafParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(DecafParser.ELSE, 0)

        def FOR(self):
            return self.getToken(DecafParser.FOR, 0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def EQUALS(self):
            return self.getToken(DecafParser.EQUALS, 0)

        def COMMA(self):
            return self.getToken(DecafParser.COMMA, 0)

        def RETURN(self):
            return self.getToken(DecafParser.RETURN, 0)

        def BREAK(self):
            return self.getToken(DecafParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(DecafParser.CONTINUE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DecafParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.location()
                self.state = 133
                self.match(DecafParser.ASSIGN_OP)
                self.state = 134
                self.expr(0)
                self.state = 135
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.method_call()
                self.state = 138
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.match(DecafParser.IF)
                self.state = 141
                self.match(DecafParser.LBRACKET)
                self.state = 142
                self.expr(0)
                self.state = 143
                self.match(DecafParser.RBRACKET)
                self.state = 144
                self.block()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DecafParser.ELSE:
                    self.state = 145
                    self.match(DecafParser.ELSE)
                    self.state = 146
                    self.block()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.match(DecafParser.FOR)
                self.state = 150
                self.match(DecafParser.ID)
                self.state = 151
                self.match(DecafParser.EQUALS)
                self.state = 152
                self.expr(0)
                self.state = 153
                self.match(DecafParser.COMMA)
                self.state = 154
                self.expr(0)
                self.state = 155
                self.block()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 157
                self.match(DecafParser.RETURN)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.CALLOUT) | (1 << DecafParser.LBRACKET) | (1 << DecafParser.MINUS) | (1 << DecafParser.EXCLAMATION) | (1 << DecafParser.INT_LITERAL) | (1 << DecafParser.CHAR_LITERAL) | (1 << DecafParser.BOOL_LITERAL) | (1 << DecafParser.ID))) != 0):
                    self.state = 158
                    self.expr(0)


                self.state = 161
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 162
                self.match(DecafParser.BREAK)
                self.state = 163
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 164
                self.match(DecafParser.CONTINUE)
                self.state = 165
                self.match(DecafParser.SEMICOLON)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 166
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_name(self):
            return self.getTypedRuleContext(DecafParser.Method_nameContext,0)


        def LBRACKET(self):
            return self.getToken(DecafParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DecafParser.RBRACKET, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(DecafParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def CALLOUT(self):
            return self.getToken(DecafParser.CALLOUT, 0)

        def STRING_LITERAL(self):
            return self.getToken(DecafParser.STRING_LITERAL, 0)

        def callout_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Callout_argContext)
            else:
                return self.getTypedRuleContext(DecafParser.Callout_argContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_method_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)




    def method_call(self):
